# Blaze3D

./: .gitignore  CMakeLists.txt  README.md  TODOMESHGENSCRIPT.cs
glfw/include/GLFW/: glfw3.h
glfw/src/: internal.h  win32_window.c  x11_platform.h
res/shaders/: frag.glsl
src/: Blaze.cpp  Blaze.h  BlazeHeader.h  Camera.h  Mesh.h  MeshObj.h  Renderer.h  Scene.h  Shader.h  Terrain.h  Texture.h  TextureLoader.h  Window.cpp  Window.h
src/SOIL2/: image_DXT.c  stbi_DDS_c.h
